--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Az.Blog</a>
+        <a class="navbar-brand" href="/Az.Blog-Bootstrap/">Az.Blog</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,10 +33,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Az.Blog-Bootstrap/
+                                                                   ">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/Az.Blog-Bootstrap/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -60,7 +61,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/Az.Blog-Bootstrap/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
