--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Az.Blog-Bootstrap/
+                                                                   ">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/Az.Blog-Bootstrap/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -59,7 +60,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/Az.Blog-Bootstrap/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
