--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       >
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">
-            Slill is important for everysector,
+            Skill is important for everysector,
             <span class="text-muted">grave knowledge..</span>
           </h2>
           <p class="lead">
@@ -117,7 +117,7 @@
         class="row featurette d-flex justify-content-center align-items-center"
       >
         <div class="col-md-7 order-md-1">
-          <h2 class="featurette-heading">
+          <h2 class="featurette-heading"> Amazing Technology,
             <span class="text-muted">It’ll blow your mind.</span>
           </h2>
           <p class="lead">
